--- a/CVDS-LAB05/src/main/webapp/index.html
+++ b/CVDS-LAB05/src/main/webapp/index.html
@@ -9,11 +9,19 @@
 <body>
     <h1>Hello World!</h1>
 </body>
-</body>
-<form action="mundoTaco" method="get">
+<script>
+    function validateForm() {
+        let x = document.forms["formTodo"]["numero"].value;
+        if (isNaN(x)) {
+            alert("Dato no adecuado");
+            return false;
+        }
+    }
+</script>
+<form name="formTodo"  action="mundoTaco" method="post">
     <label for="numero">Number</label><br>
-    <input type="number" id="id" name="id">
-    <button type="submit">Enviar</button>
+    <input type="text"  id="numero" name="id">
+    <button type="submit" onclick="validateForm()">Enviar</button>
 </form>
 
 </html>
